non-msrv-tests/tests/ui/item_option_syntax.stderr
error: Unexpected option syntax
 --> tests/ui/item_option_syntax.rs:1:30
  |
1 | #[derive_where::derive_where(Debug = "option"; T)]
  |                              ^^^^^^^^^^^^^^^^
